--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 0.1)
 project(test VERSION 0.1.0 LANGUAGES C CXX)
 
-add_executable(C-Examples GeneralExamples/src/main.cpp)
+add_executable(Cpp-Examples GeneralExamples/src/main.cpp)
 
 include(CTest)
 enable_testing()
